Change API and Add Multi array support