@@ -18,7 +18,12 @@
 
 package toml.parser.test.core;
 
-import io.ballerina.toml.Toml;
+import io.ballerina.toml.api.Toml;
+import io.ballerina.toml.ast.TomlArrayValueNode;
+import io.ballerina.toml.ast.TomlBooleanValueNode;
+import io.ballerina.toml.ast.TomlDoubleValueNodeNode;
+import io.ballerina.toml.ast.TomlLongValueNode;
+import io.ballerina.toml.ast.TomlStringValueNode;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
@@ -34,21 +39,20 @@ public class KeyValueTest {
 
     @Test
     public void testKeys() throws IOException {
-
-        Toml toml = new Toml();
         InputStream inputStream = Thread.currentThread().getContextClassLoader()
                 .getResourceAsStream("core/keys.toml");
-        Toml read = toml.read(inputStream);
-        String basicKey = read.getString("key");
-        String underscoreKey = read.getString("underscore_key");
-        String dashKey = read.getString("dash-key");
-        String intKey = read.getString("1234");
+        Toml read = Toml.read(inputStream);
+        String basicKey = ((TomlStringValueNode) read.get("key")).getValue();
+        String underscoreKey = ((TomlStringValueNode) read.get("underscore_key")).getValue();
+        String dashKey = ((TomlStringValueNode) read.get("dash-key")).getValue();
+        String intKey = ((TomlStringValueNode) read.get("1234")).getValue();
 
-        String dottedString = read.getTable("127").getTable("0").getTable("0").getString("1");
-        String spacing = read.getString("character encoding");
-        String unicode = read.getString("ʎǝʞ");
-        String general = read.getString("key2");
-        String escape = read.getString("quoted \"value\"");
+        String dottedString =
+                ((TomlStringValueNode) read.getTable("127").getTable("0").getTable("0").get("1")).getValue();
+        String spacing = ((TomlStringValueNode) read.get("character encoding")).getValue();
+        String unicode = ((TomlStringValueNode) read.get("ʎǝʞ")).getValue();
+        String general = ((TomlStringValueNode) read.get("key2")).getValue();
+        String escape = ((TomlStringValueNode) read.get("quoted \"value\"")).getValue();
 
         Assert.assertEquals(basicKey, "basic key");
         Assert.assertEquals(underscoreKey, "Underscore Key");
@@ -63,33 +67,64 @@ public class KeyValueTest {
     }
 
     @Test
-    public void testValues() throws IOException {
-
-        Toml toml = new Toml();
+    public void testBasicValues() throws IOException {
         InputStream inputStream = Thread.currentThread().getContextClassLoader()
                 .getResourceAsStream("core/values.toml");
-        Toml read = toml.read(inputStream);
-        String stringValue = read.getString("key1");
-        Long longValue = read.getLong("key2");
-        Double doubleValue = read.getDouble("key3");
-        String multiString = read.getString("key4");
-        List<Long> longList = read.getList("key5");
-        boolean boolfalse = read.getBoolean("key6");
-        boolean booltrue = read.getBoolean("key7");
+        Toml read = Toml.read(inputStream);
+        String stringValue = ((TomlStringValueNode) read.get("key1")).getValue();
+        Long longValue = ((TomlLongValueNode) read.get("key2")).getValue();
+        Double doubleValue = ((TomlDoubleValueNodeNode) read.get("key3")).getValue();
+        String multiString = ((TomlStringValueNode) read.get("key4")).getValue();
+        boolean boolfalse = ((TomlBooleanValueNode) read.get("key6")).getValue();
+        boolean booltrue = ((TomlBooleanValueNode) read.get("key7")).getValue();
 
         Assert.assertEquals(stringValue, "hello");
-        Assert.assertEquals(longValue, new Long(123L));
+        Assert.assertEquals(longValue, Long.valueOf(123L));
         Assert.assertEquals(doubleValue, 56.55);
         Assert.assertEquals(multiString, "\n" +
                 "Roses are red\n" +
                 "Violets are blue");
-        List<Long> expectedLongList = new ArrayList<>();
-        expectedLongList.add(1L);
-        expectedLongList.add(2L);
-        expectedLongList.add(3L);
-        Assert.assertEquals(longList, expectedLongList);
         Assert.assertFalse(boolfalse);
         Assert.assertTrue(booltrue);
     }
 
+    @Test
+    public void testArrayValues() throws IOException {
+        InputStream inputStream = Thread.currentThread().getContextClassLoader()
+                .getResourceAsStream("core/array.toml");
+        Toml read = Toml.read(inputStream);
+        TomlArrayValueNode sameType = read.get("same_type");
+        List<Long> longArr = sameType.toList();
+        List<Long> expectedLongList = new ArrayList<>();
+        expectedLongList.add(1L);
+        expectedLongList.add(2L);
+        expectedLongList.add(3L);
+        Assert.assertEquals(longArr, expectedLongList);
+
+        TomlArrayValueNode mixedType = read.get("mixed_type");
+        Long first = ((TomlLongValueNode) mixedType.get(0)).getValue();
+        Long second = ((TomlLongValueNode) mixedType.get(1)).getValue();
+        String third = ((TomlStringValueNode) mixedType.get(2)).getValue();
+        Long fourth = ((TomlLongValueNode) mixedType.get(3)).getValue();
+
+        Assert.assertEquals(first, Long.valueOf(1L));
+        Assert.assertEquals(second, Long.valueOf(2L));
+        Assert.assertEquals(fourth, Long.valueOf(3L));
+        Assert.assertEquals(third, "test string");
+
+        TomlArrayValueNode nestedArray = read.get("nested_array");
+        Long nfirst = ((TomlLongValueNode) nestedArray.get(0)).getValue();
+        Long nsecond = ((TomlLongValueNode) nestedArray.get(1)).getValue();
+        Long nfourth = ((TomlLongValueNode) nestedArray.get(3)).getValue();
+        TomlArrayValueNode childArray = nestedArray.get(2);
+        Long cfirst = ((TomlLongValueNode) childArray.get(0)).getValue();
+        Long csecond = ((TomlLongValueNode) childArray.get(1)).getValue();
+
+        Assert.assertEquals(nfirst, Long.valueOf(1L));
+        Assert.assertEquals(nsecond, Long.valueOf(2L));
+        Assert.assertEquals(nfourth, Long.valueOf(3L));
+
+        Assert.assertEquals(cfirst, Long.valueOf(5L));
+        Assert.assertEquals(csecond, Long.valueOf(6L));
+    }
 }
